# sector-portfolio-agent

./: .gitignore  DISCUSSION_HISTORY_IMPLEMENTATION.md  README.md  fix_qdrant_index.py  inspect_package.py  main.py  pyproject.toml  test_qdrant_search.ipynb
.github/: copilot-instructions.md
agent_test/: portfolio_agent_anthropic.py  portfolio_agent_langgraph.py  portfolio_agent_multi.py
agents/: data_agent.py  news_agent.py  sentiment_analyzer.py  tools.py
core/: db.py  graph_builder.py  llm_clients.py  vector_db.py
experiments/: db_connect_test.py  model_download.py  portfolio_endpoint.py  portfolio_endpoint_langgraph.py  test_discussion_display.html  test_env_db.py  test_llm_factory.py  test_qdrant_local_rag.py
experiments/templates/: index.css  index.html  index.js  test_multi_agent.html
jobs/: calc_signals_latest.py  load_fundamentals.py  load_prices_daily.py  seed_companies.py
