[project]
# 1. 프로젝트 기본 정보 (필수)
name = "sector-portfolio-agent"
version = "0.1.0"
description = "AI-powered sector portfolio generator"
requires-python = ">=3.10"  # 사용할 파이썬 최소 버전을 지정합니다.

# 2. 핵심 의존성 (Agent 실행에 필요한 것들)
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "openai",
    "yfinance",
    "pandas",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "firecrawl-py",
    "qdrant-client",
    "sentence-transformers"
]

# 3. 개발용/선택적 의존성 (테스트, 린팅 등)
[project.optional-dependencies]
dev = [
    "pytest",  # 나중에 테스트 코드를 만들 때 사용
    "ruff"     # 초고속 파이썬 린터 (VSCode 확장과 연동하면 최고)
]