[project]
# 1. 프로젝트 기본 정보 (필수)
name = "sector-portfolio-agent"
version = "0.1.0"
description = "AI-powered sector portfolio generator (LangGraph Engine)"
requires-python = ">=3.10"  # 사용할 파이썬 최소 버전을 지정합니다.

# 2. 핵심 의존성 (Agent 실행에 필요한 것들)
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "openai",
    "yfinance",
    "pandas",
    "langchain",
    "langchain-openai",
    # --- RAG & Tool 라이브러리 ---
    "langchain-community",
    "tavily-python",
    "firecrawl-py",
    "qdrant-client",
    "sentence-transformers",
    "langgraph",
    "langchain_core",
    "psycopg2-binary>=2.9.11",
    "certifi>=2025.10.5",
    "pykrx>=1.0.51",
    "anthropic>=0.72.0",
    "plotly>=6.4.0",
    "playwright>=1.56.0",
    "transformers>=4.30.0", # FinBERT-KR
    "torch>=2.0.0", # PyTorch (CPU 버전)
    "sentencepiece>=0.1.99", # Tokenizer
    "streamlit>=1.51.0",
]

# 3. 개발용/선택적 의존성 (테스트, 린팅 등)
[project.optional-dependencies]
dev = [
    "pytest",  # 나중에 테스트 코드를 만들 때 사용
    "ruff"     # 초고속 파이썬 린터 (VSCode 확장과 연동하면 최고)
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
